Translate java part